src/objects/z_SObjectDescription__c.object
<CustomObject>
    <fields>
        <fullName>isAccessible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAccessible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCreateable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCreateable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCustomSetting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCustomSetting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCustom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCustom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDeltable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDeltable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDeprecatedAndHidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDeprecatedAndHidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isFeedEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isFeedEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isMergeable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isMergeable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isQueryable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isQueryable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSearchable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSearchable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isUndeletable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isUndeletable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isUpdateable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isUpdateable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>keyPrefix__c</fullName>
        <label>keyPrefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>labelPlural__c</fullName>
        <label>labelPlural</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>label__c</fullName>
        <label>label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>localName__c</fullName>
        <label>localName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SObject</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>label__c</columns>
        <columns>isAccessible__c</columns>
        <columns>isCreateable__c</columns>
        <columns>isCustom__c</columns>
        <columns>isCustomSetting__c</columns>
        <columns>isDeltable__c</columns>
        <columns>isDeprecatedAndHidden__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>